# docker_test

./: Dockerfile  app.py  pyproject.toml
