[tool.poetry]
name = "docker-test"
version = "0.1.0"
description = "Teste"
authors = ["pmirandaf <pablo.miranda.oliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
streamlit = "^1.32.2"
pipx = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
